--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,14 +41,15 @@ build:
 
 after_build:
 - for /R . %%f in (*.exe *.lib *.pdb *.dll) do copy %%f .
-- 7z a COLLADA2GLTF-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
+- for /F "delims=-" %%a in ("%APPVEYOR_REPO_BRANCH%") do set RELEASE=%%a
+- 7z a COLLADA2GLTF-"%RELEASE%"-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
   .\*.exe
   .\*.lib
   .\*.pdb
   .\*.dll
 
 artifacts:
-- path: cmake-build/COLLADA2GLTF-windows-$(configuration)-$(platform).zip
+- path: cmake-build/*.zip
   name: built-zip
 
 deploy:
