--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,19 +28,19 @@ add_subdirectory(dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader)
 include_directories(GLTF/include)
 add_subdirectory(GLTF)
 
-# COLLADA2GLTF_lib
+# COLLADA2GLTF-lib
 include_directories(include)
 file(GLOB LIB_HEADERS "include/*.h")
 set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp src/COLLADA2GLTFExtrasHandler.cpp)
-add_library(${PROJECT_NAME}_lib ${LIB_HEADERS} ${LIB_SOURCES})
-target_link_libraries(${PROJECT_NAME}_lib GLTF COLLADASaxFrameworkLoader)
+add_library(${PROJECT_NAME}-lib ${LIB_HEADERS} ${LIB_SOURCES})
+target_link_libraries(${PROJECT_NAME}-lib GLTF COLLADASaxFrameworkLoader)
 
 # argparse
 include_directories(dependencies/argparse/argparse/)
 add_subdirectory(dependencies/argparse/modules/argparse)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
-target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_lib argparse)
+target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib argparse)
 
 if(test)
   enable_testing()
@@ -55,8 +55,8 @@ if(test)
   file(GLOB TEST_HEADERS "test/include/*.h")
   file(GLOB TEST_SOURCES "test/src/*.cpp")
 
-  add_executable(${PROJECT_NAME}_TEST ${TEST_HEADERS} ${TEST_SOURCES})
-  target_link_libraries(${PROJECT_NAME}_TEST  ${PROJECT_NAME}_lib GLTF gtest)
+  add_executable(${PROJECT_NAME}-test ${TEST_HEADERS} ${TEST_SOURCES})
+  target_link_libraries(${PROJECT_NAME}-test  ${PROJECT_NAME}-lib GLTF gtest)
 
-  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}_TEST)
+  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}-test)
 endif()
