Link against stdc++fs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,12 @@ target_link_libraries(${PROJECT_NAME}-lib GLTF COLLADASaxFrameworkLoader)
 include_directories(dependencies/argparse/argparse/)
 add_subdirectory(dependencies/argparse/modules/argparse)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
-target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib argparse)
+add_executable(${PROJECT_NAME}-bin src/main.cpp)
+if(MSVC)
+  target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} argparse)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+   target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} argparse stdc++fs)
+endif()
 
 if(test)
   enable_testing()
