Remove -lib suffix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,12 +30,12 @@ add_subdirectory(dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader)
 include_directories(GLTF/include)
 add_subdirectory(GLTF)
 
-# COLLADA2GLTF-lib
+# COLLADA2GLTF
 include_directories(include)
 file(GLOB LIB_HEADERS "include/*.h")
 set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp src/COLLADA2GLTFExtrasHandler.cpp)
-add_library(${PROJECT_NAME}-lib ${LIB_HEADERS} ${LIB_SOURCES})
-target_link_libraries(${PROJECT_NAME}-lib GLTF COLLADASaxFrameworkLoader)
+add_library(${PROJECT_NAME} ${LIB_HEADERS} ${LIB_SOURCES})
+target_link_libraries(${PROJECT_NAME} GLTF COLLADASaxFrameworkLoader)
 
 # argparse
 include_directories(dependencies/argparse/argparse/)
@@ -62,7 +62,7 @@ if(test)
   file(GLOB TEST_SOURCES "test/src/*.cpp")
 
   add_executable(${PROJECT_NAME}-test ${TEST_HEADERS} ${TEST_SOURCES})
-  target_link_libraries(${PROJECT_NAME}-test  ${PROJECT_NAME}-lib GLTF gtest)
+  target_link_libraries(${PROJECT_NAME}-test  ${PROJECT_NAME} GLTF gtest)
 
   add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}-test)
 endif()
