Hopefully fixes the last regression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,11 @@ include_directories(include)
 file(GLOB LIB_HEADERS "include/*.h")
 set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp src/COLLADA2GLTFExtrasHandler.cpp)
 add_library(${PROJECT_NAME} ${LIB_HEADERS} ${LIB_SOURCES})
-target_link_libraries(${PROJECT_NAME} GLTF COLLADASaxFrameworkLoader)
+if(MSVC)
+   target_link_libraries(${PROJECT_NAME} GLTF COLLADASaxFrameworkLoader)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+   target_link_libraries(${PROJECT_NAME} GLTF COLLADASaxFrameworkLoader stdc++fs)
+endif()
 
 # argparse
 include_directories(dependencies/argparse/argparse/)
@@ -43,7 +47,7 @@ add_subdirectory(dependencies/argparse/modules/argparse)
 
 add_executable(${PROJECT_NAME}-bin src/main.cpp)
 if(MSVC)
-  target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} argparse)
+   target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} argparse)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} argparse stdc++fs)
 endif()
