--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "dependencies/OpenCOLLADA/OpenCOLLADA"]
 	path = dependencies/OpenCOLLADA/OpenCOLLADA
-	url = git@github.com:KhronosGroup/OpenCOLLADA.git
+	url = https://github.com/KhronosGroup/OpenCOLLADA.git
 [submodule "dependencies/rapidjson"]
 	path = GLTF/dependencies/rapidjson
 	url = https://github.com/miloyip/rapidjson
 [submodule "dependencies/googletest"]
 	path = GLTF/dependencies/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
 [submodule "dependencies/argparse/argparse"]
 	path = dependencies/argparse/argparse
-	url = git@github.com:cofyc/argparse.git
+	url = https://github.com/cofyc/argparse.git
