--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,10 +59,13 @@ endif()
 include_directories(dependencies/argparse/argparse/)
 add_subdirectory(dependencies/argparse/modules/argparse)
 
-set(TARGET_LIBS ${PROJECT_NAME} argparse )
+set(TARGET_LIBS ${PROJECT_NAME} )
 if (MSVC)
-  list(APPEND TARGET_LIBS stdc++fs)
+  list(APPEND TARGET_LIBS argparse)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  list(APPEND TARGET_LIBS argparse stdc++fs)
 endif()
+
 if (USE_DRACO)
   list(APPEND TARGET_LIBS draco dracodec)
 endif()
