Updated to draco 1.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,7 @@ option(USE_DRACO "Use Draco Compression Extension." ON)
 if (USE_DRACO)
   message(STATUS "Using Draco.")
   add_definitions( -DUSE_DRACO )
-  include_directories(dependencies/draco/)
-  include_directories(dependencies/draco/compression)
-  include_directories(dependencies/draco/compression/config)
-  include_directories(dependencies/draco/core)
-  include_directories(dependencies/draco/io)
-  include_directories(dependencies/draco/mesh)
-  include_directories(dependencies/draco/point_cloud)
+  include_directories(dependencies/draco/src)
   add_subdirectory(dependencies/draco)
 endif()
 
@@ -76,7 +70,7 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 endif()
 
 if (USE_DRACO)
-  list(APPEND TARGET_LIBS draco dracodec)
+  list(APPEND TARGET_LIBS draco)
 endif()
 
 add_executable(${PROJECT_NAME}-bin src/main.cpp)
