--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = dependencies/ahoy
 	url = https://github.com/lasalvavida/ahoy.git
 [submodule "dependencies/draco"]
-	path = dependencies/draco
+	path = GLTF/dependencies/draco
 	url = https://github.com/google/draco
