--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,15 +19,6 @@ endif()
 
 # cmake -Dtest=ON to build with tests
 option(test "Build all tests." OFF)
-option(USE_DRACO "Use Draco Compression Extension." OFF)
-
-# Draco
-if (USE_DRACO)
-  add_definitions( -DUSE_DRACO )
-  include_directories(dependencies/draco/src)
-  add_subdirectory(dependencies/draco)
-endif()
-
 
 # GLTF
 include_directories(GLTF/include)
@@ -39,6 +30,9 @@ set(test OFF)
 
 # RapidJSON
 include_directories(GLTF/dependencies/rapidjson/include)
+
+# Draco
+include_directories(GLTF/dependencies/draco/src)
 
 # Pre-compiled
 if(precompiled MATCHES "X86")
@@ -135,9 +129,7 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_link_libraries(${PROJECT_NAME}-bin ${PROJECT_NAME} ahoy stdc++fs)
 endif()
 
-if (USE_DRACO)
-   target_link_libraries(${PROJECT_NAME}-bin draco)
-endif()
+target_link_libraries(${PROJECT_NAME}-bin draco)
 
 if(TEST_ENABLED)
   enable_testing()
