--- a/GLTF/CMakeLists.txt
+++ b/GLTF/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.1.0)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 set(PROJECT_NAME GLTF)
 
@@ -16,6 +17,10 @@ include_directories(dependencies/rapidjson/include)
 # Draco
 include_directories(dependencies/draco/src)
 add_subdirectory(dependencies/draco)
+get_property(draco_targets DIRECTORY dependencies/draco PROPERTY BUILDSYSTEM_TARGETS)
+foreach(draco_target IN LISTS draco_targets)
+	set_property(TARGET ${draco_target} PROPERTY FOLDER "draco")
+endforeach()
 
 # gltf
 include_directories(include)
