Try undef malloc header in LibXML

--- a/dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/CMakeLists.txt
+++ b/dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/CMakeLists.txt
@@ -12,6 +12,7 @@ add_definitions(
   -DLIBXML_REGEXP_ENABLED
   -DLIBXML_SCHEMAS_ENABLED
   -DLIBXML_XPATH_ENABLED
+  -DHAVE_MALLOC_H=0
 )
 
 set(SYS_SOURCES)
