Stub out our own mac config without ansidecl

--- a/dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/CMakeLists.txt
+++ b/dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/GeneratedSaxParser/LibXML/CMakeLists.txt
@@ -16,7 +16,7 @@ add_definitions(
 
 if(APPLE)
   add_definitions(-Dmacintosh)
-  include_directories(${PROJECT_PATH}/macos/src)
+  include_directories(include)
 endif()
 
 set(SYS_SOURCES)
