--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ compiler: g++
 git:
   submodules: true
 cache:
-- build/dependencies
-- build/GLTF/dependencies
+- build
 install:
 - if [ "$CXX" = "g++" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then export CXX="g++-5" CC="gcc-5" PERM_FLAGS="/u+x"; fi
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export PERM_FLAGS="+111"; fi
