--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,11 @@ set(TEST_ENABLED ${test})
 set(test OFF)
 
 # RapidJSON
-include_directories(GLTF/dependencies/rapidjson/include)
+if(DEFINED RAPIDJSON_INCLUDE_DIR)
+  include_directories(${RAPIDJSON_INCLUDE_DIR})
+else()
+  include_directories(GLTF/dependencies/rapidjson/include)
+endif()
 
 # Draco
 include_directories(GLTF/dependencies/draco/src)
