--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
     - g++-5
     - cmake
     - cmake-data
-script: mkdir build && cd build && cmake -Dtest=ON .. && make && make test && cd ../test/js && npm install && npm run test && cd ../build
+script: mkdir build && cd build && cmake -Dtest=ON .. && make && make test && cd ../test/js && npm install && npm run test && cd ../../build
 after_success:
 - if [ ! -z "$TRAVIS_TAG" ]; then
     export RELEASE=`echo "$TRAVIS_TAG"| awk -F"-" '{print $1}'`;
