--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ os:
   - linux
   - osx
 language: cpp
-node_js:
-  - "8"
 compiler: g++
 git:
   submodules: true
@@ -22,7 +20,9 @@ addons:
     - g++-5
     - cmake
     - cmake-data
-script: mkdir build && cd build && cmake -Dtest=ON .. && make && make test && cd ../test/js && npm i -g npm && npm install && npm run test && cd ../../build
+script: 
+- mkdir build && cd build && cmake -Dtest=ON .. && make && make test 
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then cd ../test/js && npm i -g npm && npm install && npm run test && cd ../../build; fi
 after_success:
 - if [ ! -z "$TRAVIS_TAG" ]; then
     export RELEASE=`echo "$TRAVIS_TAG"| awk -F"-" '{print $1}'`;
