Missing PCRE include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADASaxFrameworkLoad
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADABaseUtils/include)
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADAFramework/include)
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/GeneratedSaxParser/include)
+include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/Externals/pcre)
 if(NOT OpenCOLLADA)
   add_subdirectory(dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader)
   set(OpenCOLLADA COLLADASaxFrameworkLoader)
