--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,9 +2,18 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  cpplint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-python@v1
+    - run: pip install cpplint
+    - run: cpplint --recursive .
+
   build-windows:
     name: build-windows
     runs-on: windows-latest
+    needs: cpplint
 
     steps:
     - name: Checkout
@@ -76,6 +85,7 @@ jobs:
   build-linux:
     name: build-linux
     runs-on: ubuntu-latest
+    needs: cpplint
 
     steps:
     - uses: actions/setup-node@v1
@@ -154,6 +164,7 @@ jobs:
   build-osx:
     name: build-osx
     runs-on: macos-latest
+    needs: cpplint
 
     steps:
     - name: Checkout
