--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -10,10 +10,18 @@ jobs:
     - run: pip install cpplint
     - run: cpplint --recursive .
 
+  clang-format:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: DoozyX/clang-format-lint-action@v0.6
+      with:
+        style: Google
+
   build-windows:
     name: build-windows
     runs-on: windows-latest
-    needs: cpplint
+    needs: [cpplint, clang-format]
 
     steps:
     - name: Checkout
@@ -85,7 +93,7 @@ jobs:
   build-linux:
     name: build-linux
     runs-on: ubuntu-latest
-    needs: cpplint
+    needs: [cpplint, clang-format]
 
     steps:
     - uses: actions/setup-node@v1
@@ -164,7 +172,7 @@ jobs:
   build-osx:
     name: build-osx
     runs-on: macos-latest
-    needs: cpplint
+    needs: [cpplint, clang-format]
 
     steps:
     - name: Checkout
