Try to fix windows build

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Run cmake
       run: |
         cd ${{ github.workspace }}
-        mkdir build 2>NUL
+        mkdir build /p
         cd build
         cmake .. -Dtest=ON
 
